--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Template</title>
+	<title>Jetris</title>
 	<script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser-arcade-physics.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="./main.css" /> 
 </head>
