Graphics, hold, queue

--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
 <head>
 	<title>Jetris</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo" />
 	<script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser-arcade-physics.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="./main.css" /> 
 </head>
 <body>
-	<script src="main.js"></script>
+	<div><script src="main.js"></script></div>
 </body>
 </html>
