--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Jetris</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser-arcade-physics.min.js"></script>
+	<title>GJBird</title>
+	<script src="//cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="./main.css" /> 
 </head>
 <body>
-	<div><script src="main.js"></script></div>
+	<script src="main.js"></script>
 </body>
 </html>
