--- a/typi/index.html
+++ b/typi/index.html
@@ -6,7 +6,7 @@
 <title>Typi</title>
 <style>
   * { margin:0; padding:0; box-sizing:border-box; }
-  html, body { height:100%; background:#040218; font-family:Arial, sans-serif; }
+  html, body { height:100%; background:#1a1a2e; font-family:Arial, sans-serif; }
 
   /* Center the game if you want; remove if not needed */
   body { display:flex; align-items:center; justify-content:center; }
